Thu Apr 05 04:25:45 GMT 2012  Olly Betts <olly@survex.com>

	* README,configure.ac,lua/docs/index.html,lua/util.i: Fix compatibility
	  with Lua 5.2.

Thu Apr 05 04:23:22 GMT 2012  Olly Betts <olly@survex.com>

	* lua/smoketest.lua: Remove bogus \ before q.

Thu Apr 05 03:45:08 GMT 2012  Olly Betts <olly@survex.com>

	* lua/smoketest.lua: Convert tabs to spaces.

Thu Apr 05 03:43:52 GMT 2012  Olly Betts <olly@survex.com>

	* lua/smoketest.lua: Check behaviour of "require 'xapian'" - SWIG 2.0.4
	  and earlier got this wrong.  Part of patch from istr in #593, plus
	  a few tweaks.

Thu Apr 05 03:28:50 GMT 2012  Olly Betts <olly@survex.com>

	* lua/smoketest.lua: Improve expect() function to take an option
	  failure message, to report how values differed, and to compare tables
	  in a smarter way.  Part of patch from istr in #593.

Thu Apr 05 02:46:21 GMT 2012  Olly Betts <olly@survex.com>

	* perl/t/thread.t,perl/t/writabledatabase.t: Remove #! lines with -W
	  to fix "Name "Test::More::TODO" used only once: possible typo at
	  /usr/share/perl/5.14/Exporter/Heavy.pm line 190." warnings.

Wed Apr 04 14:06:47 GMT 2012  Olly Betts <olly@survex.com>

	* python/docs/examples/simpleexpand.py: Update to not use deprecated
	  MSet iteration features which have been removed on trunk.  This
	  also fixes a segfault if there are no matches and no documents
	  are explicitly marked as relevant.

Wed Mar 28 09:22:48 GMT 2012  Olly Betts <olly@survex.com>

	* xapian-head.i: Update for new deprecation macros.

Fri Mar 23 00:42:11 GMT 2012  Olly Betts <olly@survex.com>

	* php/smoketest.php: More tests of geospatial API.

Thu Mar 22 23:49:50 GMT 2012  Olly Betts <olly@survex.com>

	* perl/util.i.in: Avoid importing isa from UNIVERSAL to fix Perl 5.12
	  deprecation warning.

Tue Mar 20 02:04:51 GMT 2012  Olly Betts <olly@survex.com>

	* php/smoketest.php: More tests of geospatial API.

Sun Mar 18 00:38:48 GMT 2012  Dan Colish <dcolish@gmail.com>
